--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,12 @@ html, body {
     background-color: black;
 }
 
+body {
+    background: url(../images/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 main {
     height: 100vh;
     position: relative;
