--- a/styles/style.css
+++ b/styles/style.css
@@ -23,33 +23,24 @@ main {
     
 }
 
-#teladiv {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 648px;
-    width: 330px;   
-}
-
 #telefone {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 649px;
-    width: 330px;
+    height: 627px;
+    width: 311px;
     background: url(../images/frame-iphone.png) no-repeat;
 }
 
 #tela {
-    position: absolute;
-    top: 15px;
-    left: 14.5px;
-    height: 620px;
-    width: 300px;
-    border-radius: 15px;
-    border-bottom-right-radius: 23px;
+    position: relative;
+    top: 78px;
+    left: 22px;
+    height: 475px;
+    width: 267px;
+    border-radius: 5px;
+    border-style: none;
 }
 
 #redes-sociais {
